# sqlite-ulid

./: .gitignore  Cargo.toml  Makefile  README.md  VERSION  bench.sh  bench.sql  docs.md  test.sql
.github/workflows/: release.yaml  rename-wheels.py  test.yaml  upload-deno-assets.js  upload-unstable.js  upload.js  win-test.yaml
bindings/go/: go.mod  lib.go
bindings/go/ulid/: sqlite-ulid.h  ulid.go
bindings/ruby/: sqlite_ulid.gemspec
bindings/ruby/lib/: sqlite_ulid.rb  version.rb  version.rb.tmpl
bindings/sqlite-utils/: README.md  pyproject.toml  pyproject.toml.tmpl
bindings/sqlite-utils/sqlite_utils_sqlite_ulid/: __init__.py
deno/: README.md  README.md.tmpl  deno.json  deno.json.tmpl  mod.ts  test.ts
examples/c/: Makefile  demo.c
examples/go/: Makefile  demo.go  go.mod  go.sum
npm/: README.md
npm/sqlite-ulid/: README.md  package.json  package.json.tmpl  test.js
npm/sqlite-ulid-darwin-arm64/: README.md  package.json
npm/sqlite-ulid-darwin-x64/: README.md  package.json
npm/sqlite-ulid-linux-x64/: README.md  package.json
npm/sqlite-ulid-windows-x64/: README.md  package.json
npm/sqlite-ulid/src/: index.js
python/: README.md  setup.py
python/datasette_sqlite_ulid/: README.md  setup.py
python/datasette_sqlite_ulid/datasette_sqlite_ulid/: __init__.py  version.py
python/datasette_sqlite_ulid/tests/: test_sqlite_ulid.py
python/sqlite_ulid/: README.md  __init__.py  setup.py
scripts/: deno_generate_package.sh  npm_generate_platform_packages.sh
src/: lib.rs
tests/: test-loadable.py  test-python.py
(+2 files in other folders)
