[package]
name = "sqlite-ulid"
version = "0.2.1-alpha.15"
edition = "2021"
authors = ["Alex Garcia <alexsebastian.garcia@gmail.com>"]
description = "A SQLite extension for working with ULIDs"
homepage = "https://github.com/asg017/sqlite-ulid"
repository = "https://github.com/asg017/sqlite-ulid"
keywords = ["sqlite", "sqlite-extension"]
license = "MIT/Apache-2.0"

[dependencies]
sqlite-loadable = "0.0.5"
ulid = "1.0.0"
chrono = "0.4.23"

[lib]
crate-type=["lib", "staticlib", "cdylib"]
