[project]
name = "sqlite-utils-sqlite-ulid"
version = "0.2.1-alpha.15"
description = "TODO"
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = {text = "Apache-2.0"}
classifiers = []

dependencies = [
    "sqlite-utils",
    "sqlite-ulid"
]

[project.urls]
Homepage = "https://github.com/asg017/sqlite-ulid"
Changelog = "https://github.com/asg017/sqlite-ulid/releases"
Issues = "https://github.com/asg017/sqlite-ulid/issues"

[project.entry-points.sqlite_utils]
sqlite_ulid = "sqlite_utils_sqlite_ulid"
